[project]
name = "trnpy"
version = "0.0.1"
authors = [
  { name="John Dyreby", email="john@isentropic.dev" },
  { name="Greg Troszak", email="greg@isentropic.dev" },
]
description = "A Python wrapper for TRNSYS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/isentropic-dev/trnpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
