[project]
name = "trnpy"
authors = [
  { name = "John Dyreby", email = "john@isentropic.dev" },
  { name = "Greg Troszak", email = "greg@isentropic.dev" },
]
description = "A Python wrapper for transient simulations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/isentropic-dev/trnpy"

[project.optional-dependencies]
lint = [
  "black == 25.1.0",
  "flake8 == 7.1.2",
  "isort == 6.0.0",
  "pydocstyle[toml] == 6.3.0",
]
test = ["coverage == 7.6.11", "pytest == 8.3.4"]
typing = ["mypy == 1.15.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
strict = true
files = ["src/trnpy"]

[tool.pydocstyle]
convention = "google"
match-dir = "trnpy|tests"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
